# binglish-v2

./: MODULES.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: bump-version.mjs
src/: game-overlay.html  history-overlay.html  index.html  rest-overlay.html  word-sticky.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: words.json
src-tauri/src/: idle_detector.rs  lib.rs  main.rs  scheduler.rs  state.rs  text_renderer.rs  tray.rs  wallpaper_setter.rs  word_db.rs
src-tauri/src/commands/: audio.rs  games.rs  history.rs  mod.rs  system.rs  wallpaper.rs
src/scripts/: game-lobby.ts  history-overlay.ts  rest-overlay.ts  word-sticky.ts
src/scripts/shared/: invoke.ts  types.ts
src/styles/: base.css  games.css  history.css  rest.css  sticky.css
