[package]
name = "binglish-v2"
version = "2.0.0"
description = "AI Desktop English Learning App"
authors = ["klemperer"]
edition = "2021"

[lib]
name = "binglish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
kamadak-exif = "0.5"
rodio = { version = "0.19", features = ["mp3"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
